# siy

./: README.md  pyproject.toml
lib/siy/: pyproject.toml
lib/siy/siy/: __init__.py
lib/siy/siy/entities/: __init__.py  connection.py  data_table.py
lib/siy/siy/entities/data_lakes/: __init__.py  base_data_lake.py
lib/siy/siy/entities/destinations/: __init__.py  base_destination.py
lib/siy/siy/entities/sources/: __init__.py  airbyte_ingest_source.py  base_source.py  custom_docker_image_source.py  dbt_source.py
lib/siy/siy/factories/: airflow_workflow_factory.py
lib/siy/siy/repositories/: __init__.py  connection_repository.py
lib/siy/siy/repositories/gcp_firestore/: firestore_connection_repository.py
lib/siy/siy/services/: __init__.py  deserialization_service.py
lib/siy/siy/value_items/: __init__.py  airbyte_connection_info.py  data_version.py  datatable.py  destination_mode.py  docker_task.py  published_state.py  table_processed_message.py  url.py
siy/entities/: __init__.py  connection.py
siy/entities/data_lakes/: big_query_data_lake.py
siy/entities/destinations/: base_destination.py
siy/entities/sources/: base_source.py  custom_docker_image_source.py  dbt_source.py
siy/factories/: __init__.py  airflow_workflow_factory.py  base_workflow_factory.py
siy/repositories/: table_processed_message_repository.py
siy/value_items/: __init__.py  datatable.py  table_processed_message.py
